# match-ibm-final-project

./: .env-sample  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: config.py  index.py
api/resources/: __init__.py  financial_goal.py  index.py
api/routes/: __init__.py  financial_goal.py  index.py
api/static/: floatingLabel.css  reset.css  script.js  style.css  submitButton.css  toast.css  tooltip.css
api/templates/: form.html  index.html  layout.html
api/templates/body/: body.html  calculator.html  footer.html  form.html  header.html
api/templates/body/popUps/: calculationResult.html
app/: app.py
app/templates/: index.html  layout.html
tests/: conftest.py  test_financial_goal.py  test_goal.py
